force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/sf_devops__Test_Suite_Execution__c.object-meta.xml
<CustomObject>
    <label>Test Suite Execution</label>
    <nameField>
        <displayFormat>TSE-{000000}</displayFormat>
        <label>Test Suite Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Suite Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>