force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/fields/sf_devops__Coverage__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Coverage__c</fullName>
    <label>Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>