force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/fields/sf_devops__External_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>