force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/fields/sf_devops__Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Failure_Count__c</fullName>
    <label>Number of Tests Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>