force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/fields/sf_devops__Failure_Rate__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Failure_Rate__c</fullName>
    <formula>IF( sf_devops__Success_Count__c + sf_devops__Failure_Count__c = 0, null, sf_devops__Failure_Count__c/(sf_devops__Success_Count__c + sf_devops__Failure_Count__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fail Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>