force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/fields/sf_devops__Overall_Result__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Overall_Result__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sf_devops__Execution_Results</valueSetName>
    </valueSet>
</CustomField>