force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/fields/sf_devops__Target_Project__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Target_Project__c</fullName>
    <formula>sf_devops__Test_Suite_Assignment__r.sf_devops__Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Project</label>
    <type>Text</type>
</CustomField>