force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/fields/sf_devops__Target_Stage__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Target_Stage__c</fullName>
    <formula>sf_devops__Test_Suite_Assignment__r.sf_devops__Pipeline_Stage__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Stage</label>
    <type>Text</type>
</CustomField>