force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/fields/sf_devops__Test_Provider__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Provider__c</fullName>
    <formula>sf_devops__Test_Suite__r.sf_devops__Test_Provider__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Provider</label>
    <type>Text</type>
</CustomField>