force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/fields/sf_devops__Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Suite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Suite</label>
    <referenceTo>sf_devops__Test_Suite__c</referenceTo>
    <relationshipLabel>Test Suite Executions</relationshipLabel>
    <relationshipName>Test_Suite_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>