force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/fields/sf_devops__Test_Suite_Group_Execution__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Suite_Group_Execution__c</fullName>
    <label>Test Suite Group Execution</label>
    <referenceTo>sf_devops__Test_Suite_Group_Execution__c</referenceTo>
    <relationshipLabel>Test Suite Executions</relationshipLabel>
    <relationshipName>Test_Suite_Executions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>