force-app/main/default/objects/sf_devops__Test_Suite_Execution__c/listViews/sf_devops__All.listView-meta.xml
<ListView>
    <fullName>sf_devops__All</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Test_Suite__c</columns>
    <columns>sf_devops__Execution_Start_Time__c</columns>
    <columns>sf_devops__Execution_End_Time__c</columns>
    <columns>sf_devops__Overall_Result__c</columns>
    <columns>sf_devops__Result_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>